<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">SimpleTanks</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="exit">Exit</string>
    <string name="exit_notify">Do you want to exit?</string>

	<string-array name="game_modes">
		<item>Play with AI</item>
		<item>Play via LAN</item>
		<item>Play via Internet</item>
	</string-array>
	
    <!-- Server -->
	<string-array name="lan_modes">
		<item>Start server</item>
		<item>Find servers</item>
        <item>Connect to server</item>
	</string-array>

	<string name="server_settings">Server settings</string>
	<string name="server_name">Server name</string>
	<string name="serv_name_empty_notice">Server name empty!</string>
	<string name="serv_wait_clients">Waiting clients &#8230;</string>
	<string name="select_server_ip">Select server IP</string>
	<string name="network_ip_not_detected">Network IP not detected</string>
	<string name="server_stopped">Server stopped</string>
	<string name="owner_server">owner server</string>
	<string name="game_map">Game map</string>
	<string name="have_not_clients">Have not clients</string>
    <string name="notify_net_without_mdns">Network not discoverable, connect clients directly!</string>

	<!-- Client -->
	<string name="client_settings">Settings</string>
	<string name="client_name">Nickname</string>
	<string name="client_name_empty_notice">Nickname empty!!!</string>
	<string name="select_server_from_list">Select server from list</string>
	<string name="users_on_server">Users on server</string>
	<string name="map">Map</string>
	<string name="my_device">my device</string>
	<string name="server_disconnected">Disconnected from server</string>
    <string name="input_server_ip">Input server IP or URL</string>

	<!-- Common -->
	<string name="start_game">Start game</string>
	<string name="not_connected">Not connected to network</string>
	<string name="turn_on_wifi">Turn on WiFi?</string>
	<string name="connect_error">Connection failed</string>
	<string name="connecting_to">Connecting to</string>
	<string name="error_loading_map">Error loading game map</string>
	<string name="error_reading_map_list">Error reading map list</string>
	<string name="user">User</string>
	<string name="disconnected">disconnected</string>
    <string name="looser">lose</string>
    <string name="winner">winner</string>
    <string name="game_over">Game Over</string>
    <string name="you_looser">You lose</string>
    <string name="you_winner">You winner</string>

    <!-- Settings -->
    <string name="pref_landscape_mode">Landscape mode</string>

    <!-- Info -->
    <string name="info_content">
        <b>SimpleTanks</b> - simple real-time game with multiplayer via network.
    </string>
    <string name="author" translatable="false">NaikSoftware &#169; 2015.07</string>

</resources>
