<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ua.naiksoftware.simpletanks.MainActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textSize="25sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="230dp"
                android:textSize="24sp"
                android:text="@string/play" />
            
            <Button
                android:id="@+id/btnSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="230dp"
                android:textSize="24sp"
                android:text="@string/settings" />
            
            <Button
                android:id="@+id/btnInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="230dp"
                android:textSize="24sp"
                android:text="@string/info" />
            
            <Button
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="230dp"
                android:textSize="24sp"
                android:text="@string/exit" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
